# cohere-test

./: .gitignore  Makefile  README.md
backend/: .pylintrc  Makefile  docker-compose.yml  main.py  pyproject.toml
frontend/: Makefile  docker-compose.yml  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/utils/: draw.ts  examples.ts
